[FIX] Gap between header and actual content when hiding/unhiding

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -88,13 +88,25 @@ body {
   min-height: 350px!important;
 }
 .l1{
-  padding-top: 1em;padding-bottom: 1em;padding-right: 1.5%;padding-left: 1.5%;
+  margin-top: 50px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-right: 1.5%;
+  padding-left: 1.5%;
 }
-.page-type-person{
-  padding-top: 1em;padding-bottom: 2em;padding-right: 20%;padding-left: 20%;
+.page-type-person {
+  margin-top: 50px;
+  padding-top: 1em;
+  padding-bottom: 2em;
+  padding-right: 20%;
+  padding-left: 20%;
 }
 .l1-dep{ /*container*/
-  padding-top: 1em;padding-bottom: 1em;padding-right: 5%;padding-left: 5%;
+  margin-top: 50px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 .l3-fac{
   padding-top: 4em;padding-bottom: 2em;padding-right: 1.5%;padding-left: 1.5%;
@@ -124,7 +136,8 @@ hr.style4:after {
     display: block!important;
   }
   .l1{
-    padding-right: 1.5%!important;padding-left: 1.5%!important;
+    padding-right: 1.5%!important;
+    padding-left: 1.5%!important;
   }
   .brow{
     display: none!important;
